--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-google-analytics": "^3.12.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
+    "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-react-i18next": "^1.1.1",
